--- a/template.cfg
+++ b/template.cfg
@@ -8,8 +8,8 @@ gps_instructions_file = gps.mac
 
 B_field_intensity = 0.    # in Tesla
 
-switchOnScintillation = 0
-propagateScintillation = 0
+switchOnScintillation = 1
+propagateScintillation = 1
 switchOnCerenkov = 1
 propagateCerenkov = 1
 
@@ -37,11 +37,11 @@ ecal_z_gap  = 0.1  # gap between front/back crystal bar assemblies in a tower, n
 
 ecal_material        	= 14	# 1) for quartz; 13) for PlasticBC418; 14) for PWO; 15) for Acrylic; 17) EJ200; 18) BGO 19) Al
 ecal_surface            = 1     # 0) ideal polished surface 1) more realistic surface     
-ecal_front_length       = 67  	# mm, short xtal
-ecal_rear_length        = 180 	# mm, long xtal
-one_layer_ecal          = false  # drop front layer
-ecal_front_face         = 16    # mm, 16x16mm
-ecal_rear_face       	= 16  	# mm, 16x16mm
+ecal_front_length       = 1  	# mm, short xtal
+ecal_rear_length        = 60 	# mm, long xtal
+one_layer_ecal          = true  # drop front layer
+ecal_front_face         = 25    # mm, 16x16mm originally; changed to 25x25mm
+ecal_rear_face       	= 25  	# mm, 16x16mm originally; changed to 25x25mm
 narray                  = 1     # number of xtal modules in array
 
 wrap_material           = 18    # 17) Epoxy 18) Al 1) Air
